<?xml version="1.0" encoding="utf-8"?>
<!--
    Created by Chirag Desai
    Displays details of a movie
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.example.android.popularmoviesstage2.DetailActivity">

    <TextView
        android:id="@+id/textview_original_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="@dimen/abc_text_size_headline_material"
        tools:text="@string/example_original_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <ImageView
            android:id="@+id/imageview_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:contentDescription="@string/description_movie_poster"
            android:minHeight="200dp"
            tools:src="@drawable/example_movie_poster"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_release_date"
                android:textSize="@dimen/abc_text_size_medium_material"/>

            <TextView
                android:id="@+id/textview_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/abc_text_size_large_material"
                tools:text="@string/example_release_date"/>

            <TextView
                android:id="@+id/textview_vote_average_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/heading_vote_average"
                android:textSize="@dimen/abc_text_size_medium_material"/>

            <TextView
                android:id="@+id/textview_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/abc_text_size_large_material"
                tools:text="@string/example_vote_average"/>

            <Button
                android:id="@+id/button_favorite_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/medium"
                android:padding="5dp"
                android:text="@string/add_to_favorites"
                android:textColor="@color/dark"/>
        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/example_overview"/>

            <LinearLayout
                android:id="@+id/linear_layout_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_play_arrow_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/trailers"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_comment_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/reviews"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>